// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space should render MessageSpace with props and session 1`] = `
<div
  id="space"
>
  <Sidebar />
  <br />
  <Nav
    className="header"
    tag="ul"
    vertical={false}
  >
    <NavItem
      className="user"
      tag="li"
    >
      user2
    </NavItem>
    <NavItem
      className="space"
      tag="li"
    >
      space2
    </NavItem>
    <NavItem
      className="close"
      tag="li"
    >
      <Link
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        <Button
          close={true}
          color="secondary"
          tabIndex="-1"
          tag="button"
        />
      </Link>
    </NavItem>
  </Nav>
  <br />
  <MessageSpace
    updateState={[Function]}
    user={
      Object {
        "id": 2,
        "name": "user2",
        "poll": 2,
        "space": 2,
        "space_name": "space2",
        "space_status": true,
      }
    }
  />
</div>
`;

exports[`Space should render PendingSpace with props and session 1`] = `
<div
  id="space"
>
  <Sidebar />
  <br />
  <Nav
    className="header"
    tag="ul"
    vertical={false}
  >
    <NavItem
      className="user"
      tag="li"
    >
      userundefined
    </NavItem>
    <NavItem
      className="space"
      tag="li"
    >
      space3
    </NavItem>
    <NavItem
      className="close"
      tag="li"
    >
      <Link
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        <Button
          close={true}
          color="secondary"
          tabIndex="-1"
          tag="button"
        />
      </Link>
    </NavItem>
  </Nav>
  <br />
  <PendingSpace
    updateState={[Function]}
    user={
      Object {
        "name": "userundefined",
        "poll": 3,
        "space": 3,
        "space_name": "space3",
        "space_status": false,
      }
    }
  />
</div>
`;

exports[`Space should render PendingUser with props and session  1`] = `
<div
  id="space"
>
  <Sidebar />
  <br />
  <Nav
    className="header"
    tag="ul"
    vertical={false}
  >
    <NavItem
      className="user"
      tag="li"
    >
      userundefined
    </NavItem>
    <NavItem
      className="space"
      tag="li"
    >
      space3
    </NavItem>
    <NavItem
      className="close"
      tag="li"
    >
      <Link
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        <Button
          close={true}
          color="secondary"
          tabIndex="-1"
          tag="button"
        />
      </Link>
    </NavItem>
  </Nav>
  <br />
  <PendingUser
    updateState={[Function]}
    user={
      Object {
        "name": "userundefined",
        "poll": 3,
        "space": 3,
        "space_name": "space3",
        "space_status": true,
      }
    }
  />
</div>
`;

exports[`Space should render correctly with props but no session 1`] = `
<div
  id="space"
>
  <Sidebar />
  <br />
  <Nav
    className="header"
    tag="ul"
    vertical={false}
  >
    <NavItem
      className="space"
      tag="li"
    >
      space1
    </NavItem>
    <NavItem
      className="close"
      tag="li"
    >
      <Link
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        <Button
          close={true}
          color="secondary"
          tabIndex="-1"
          tag="button"
        />
      </Link>
    </NavItem>
  </Nav>
  <br />
  <div>
    <form
      id="getUserInSpaceByName"
      onSubmit={[Function]}
    >
      <input
        autoFocus={true}
        name="name"
        onChange={[Function]}
        placeholder="Type a user name..."
        type="text"
        value=""
      />
      <button
        onClick={[Function]}
        tabIndex="-1"
      >
        ENTER
      </button>
    </form>
    <ConfirmDialog
      confirm={[Function]}
      mBody="Do you want to request to join this space as ''"
      mHeader="User '' does not exist"
      showModal={false}
      toggleModal={[Function]}
    />
  </div>
</div>
`;
